# Gothic

./: .gitignore  Cargo.toml  README.md  UPDATE.md  config.example.jsonc
.github/workflows/: release.yaml
docs/: config-schema.json  task-tracking-reconciliation.md
src/: cli.rs  config.rs  consts.rs  lib.rs  logging.rs  main.rs  terminal.rs  utils.rs
src/runner/: mod.rs  trae.rs
src/trae/: consts.rs  editor.rs  mod.rs  task.rs  types.rs  workflow.rs
src/trae/tests/: mod.rs  tracing_test.rs
