[package]
name = "gothic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
async-openai = { version = "0.34.0", features = ["chat-completion"] }
chromiumoxide = "0.9.1"
futures = "0.3.32"
jsonc-parser = { version = "0.32.3", features = ["serde"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.51.1", features = ["signal"] }
