[package]
name = "gothic"
version = "0.1.0"
edition = "2024"
authors = ["0x0501"]

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
async-openai = { version = "0.34.0", features = ["chat-completion"] }
chromiumoxide = "0.9.1"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
futures = "0.3.32"
jsonc-parser = { version = "0.32.3", features = ["serde"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.51.1", features = ["signal"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "serde", "serde_json"] }
